EaStat_Compiler_VersionB/analisis/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> inicio programa2 principal cuerpo PUCOMA
Rule 2     programa2 -> dec_vars programa2
Rule 3     programa2 -> programa3
Rule 4     programa3 -> func programa3
Rule 5     programa3 -> fin
Rule 6     variable -> ID variable2
Rule 7     variable2 -> BRAIZQ C_ENT BRADER variable3
Rule 8     variable2 -> variable3
Rule 9     variable3 -> BRAIZQ C_ENT BRADER
Rule 10    variable3 -> fin
Rule 11    dec_vars -> tipo ID dec_vars2 PUCOMA
Rule 12    dec_vars2 -> BRAIZQ C_ENT BRADER dec_vars3
Rule 13    dec_vars2 -> dec_vars3
Rule 14    dec_vars3 -> BRAIZQ C_ENT BRADER
Rule 15    dec_vars3 -> fin
Rule 16    dec_vars_funcs -> tipo ID dec_vars_funcs2 PUCOMA
Rule 17    dec_vars_funcs2 -> BRAIZQ C_ENT BRADER dec_vars_funcs3
Rule 18    dec_vars_funcs2 -> dec_vars_funcs3
Rule 19    dec_vars_funcs3 -> BRAIZQ C_ENT BRADER
Rule 20    dec_vars_funcs3 -> fin
Rule 21    func -> registroFuncs PAREIZQ params PAREDER cuerpoFunc PUCOMA
Rule 22    cuerpoFunc -> LLAIZQ cuerpoFunc2 LLADER
Rule 23    cuerpoFunc2 -> dec_vars_funcs cuerpoFunc2
Rule 24    cuerpoFunc2 -> cuerpoFunc3
Rule 25    cuerpoFunc3 -> estatuto cuerpoFunc3
Rule 26    cuerpoFunc3 -> fin
Rule 27    cuerpo -> LLAIZQ cuerpo2 LLADER
Rule 28    cuerpo2 -> estatuto cuerpo2
Rule 29    cuerpo2 -> fin
Rule 30    tipo -> ENT
Rule 31    tipo -> FLOT
Rule 32    tipo -> CAR
Rule 33    params -> params2
Rule 34    params -> fin
Rule 35    params2 -> registroVars params3
Rule 36    params3 -> COMA params2
Rule 37    params3 -> fin
Rule 38    estatuto -> estatuto2 PUCOMA
Rule 39    estatuto2 -> asignacion
Rule 40    estatuto2 -> regresa
Rule 41    estatuto2 -> llamadaEstat
Rule 42    estatuto2 -> lectura
Rule 43    estatuto2 -> escribir
Rule 44    estatuto2 -> condicion
Rule 45    estatuto2 -> mientras
Rule 46    estatuto2 -> func_esp_s
Rule 47    estatuto2 -> func_esp_c
Rule 48    asignacion -> variable igual expresion_a
Rule 49    regresa -> REGRESA PAREIZQ expresion_a PAREDER
Rule 50    llamada -> idFunc pareIzqLlamada llamada2 pareDerLlamada
Rule 51    llamada2 -> llamada3
Rule 52    llamada2 -> fin
Rule 53    llamada3 -> paramExpr llamada4
Rule 54    llamada4 -> comaLlamada paramExpr llamada4
Rule 55    llamada4 -> fin
Rule 56    lectura -> leer PAREIZQ variable PAREDER
Rule 57    escribir -> escrib PAREIZQ escribir2 PAREDER
Rule 58    escribir2 -> expresion_a
Rule 59    escribir2 -> cadena
Rule 60    condicion -> SI PAREIZQ expresion_a pareDerIfWhile cuerpo condicion2
Rule 61    condicion2 -> condicion3
Rule 62    condicion2 -> condicion4
Rule 63    condicion3 -> otro cuerpo condicion4
Rule 64    condicion4 -> fin
Rule 65    mientras -> mientrasTkn PAREIZQ expresion_a pareDerIfWhile cuerpo
Rule 66    func_esp_s -> medida_posicion
Rule 67    func_esp_s -> medida_variabilidad
Rule 68    func_esp_s -> puntos_muestrales
Rule 69    func_esp_s -> distribuciones
Rule 70    medida_posicion -> media
Rule 71    medida_posicion -> mediana
Rule 72    medida_posicion -> moda
Rule 73    media -> MEDIA PAREIZQ ID PAREDER
Rule 74    mediana -> MEDIANA PAREIZQ ID PAREDER
Rule 75    moda -> MODA PAREIZQ ID PAREDER
Rule 76    medida_variabilidad -> varianza
Rule 77    medida_variabilidad -> desestandar
Rule 78    medida_variabilidad -> rango
Rule 79    varianza -> VARIANZA PAREIZQ ID PAREDER
Rule 80    desestandar -> DESESTANDAR PAREIZQ ID PAREDER
Rule 81    rango -> RANGO PAREIZQ ID PAREDER
Rule 82    puntos_muestrales -> reglamulti
Rule 83    puntos_muestrales -> combins
Rule 84    puntos_muestrales -> permuts
Rule 85    reglamulti -> REGLAMULTI PAREIZQ expresion_a reglamulti2 PAREDER
Rule 86    reglamulti2 -> COMA expresion_a reglamulti2
Rule 87    reglamulti2 -> fin
Rule 88    combins -> COMBINS PAREIZQ expresion_a COMA expresion_a PAREDER
Rule 89    permuts -> PERMUTS PAREIZQ expresion_a COMA expresion_a PAREDER
Rule 90    distribuciones -> dstbinom
Rule 91    distribuciones -> dstbinomneg
Rule 92    distribuciones -> dstgeom
Rule 93    distribuciones -> dsthipgeom
Rule 94    distribuciones -> dstpoisson
Rule 95    dstbinom -> DSTBINOM PAREIZQ dstbinom2 PAREDER
Rule 96    dstbinom2 -> expresion_a COMA expresion_a COMA expresion_a COMA expresion_a
Rule 97    dstbinomneg -> DSTBINOMNEG PAREIZQ dstbinomneg2 PAREDER
Rule 98    dstbinomneg2 -> expresion_a COMA expresion_a COMA expresion_a COMA expresion_a
Rule 99    dstgeom -> DSTGEOM PAREIZQ dstgeom2 PAREDER
Rule 100   dstgeom2 -> expresion_a COMA expresion_a COMA expresion_a
Rule 101   dsthipgeom -> DSTHIPGEOM PAREIZQ dsthipgeom2 PAREDER
Rule 102   dsthipgeom2 -> expresion_a COMA expresion_a COMA expresion_a COMA expresion_a COMA expresion_a
Rule 103   dstpoisson -> DSTPOISSON PAREIZQ dstpoisson2 PAREDER
Rule 104   dstpoisson2 -> expresion_a COMA expresion_a COMA expresion_a
Rule 105   func_esp_c -> valores_graficos
Rule 106   valores_graficos -> histograma
Rule 107   valores_graficos -> grafcaja
Rule 108   histograma -> HISTOGRAMA PAREIZQ ID PAREDER
Rule 109   grafcaja -> GRAFCAJA PAREIZQ ID PAREDER
Rule 110   expresion_a -> expresion_b revisaO expresion_a2
Rule 111   expresion_a2 -> o expresion_a
Rule 112   expresion_a2 -> fin
Rule 113   expresion_b -> expresion_c revisaY expresion_b2
Rule 114   expresion_b2 -> y expresion_b
Rule 115   expresion_b2 -> fin
Rule 116   expresion_c -> expresion_d revisaMaMeIgDif
Rule 117   expresion_c -> expresion_d revisaMaMeIgDif compara expresion_d revisaMaMeIgDif
Rule 118   expresion_d -> expresion_e revisaMasMen expresion_d2
Rule 119   expresion_d2 -> masmenos expresion_d
Rule 120   expresion_d2 -> fin
Rule 121   expresion_e -> expresion_f revisaPorDiv expresion_e2
Rule 122   expresion_e2 -> pordiv expresion_e
Rule 123   expresion_e2 -> fin
Rule 124   expresion_f -> pareizqEx expresion_a parederEx
Rule 125   expresion_f -> c_ent
Rule 126   expresion_f -> c_flot
Rule 127   expresion_f -> c_car
Rule 128   expresion_f -> variable
Rule 129   expresion_f -> llamadaExp
Rule 130   expresion_f -> func_esp_s
Rule 131   expresion_f -> cadena
Rule 132   fin -> <empty>
Rule 133   inicio -> INICIO
Rule 134   registroFuncs -> tipo ID
Rule 135   registroFuncs -> VACIO ID
Rule 136   registroVars -> tipo ID
Rule 137   mientrasTkn -> MIENTRAS
Rule 138   otro -> OTRO
Rule 139   pareDerIfWhile -> PAREDER
Rule 140   igual -> IGUAL
Rule 141   leer -> LEER
Rule 142   escrib -> ESCRIB
Rule 143   o -> O
Rule 144   y -> Y
Rule 145   compara -> MAYOR
Rule 146   compara -> MENOR
Rule 147   compara -> IGUALQ
Rule 148   compara -> DIFF
Rule 149   masmenos -> MAS
Rule 150   masmenos -> MENOS
Rule 151   pordiv -> POR
Rule 152   pordiv -> DIV
Rule 153   c_ent -> C_ENT
Rule 154   c_flot -> C_FLOT
Rule 155   c_car -> C_CAR
Rule 156   cadena -> CADENA
Rule 157   pareizqEx -> PAREIZQ
Rule 158   parederEx -> PAREDER
Rule 159   revisaO -> fin
Rule 160   revisaY -> fin
Rule 161   revisaMaMeIgDif -> fin
Rule 162   revisaMasMen -> fin
Rule 163   revisaPorDiv -> fin
Rule 164   principal -> PRINCIPAL
Rule 165   idFunc -> ID
Rule 166   pareIzqLlamada -> PAREIZQ
Rule 167   paramExpr -> expresion_a
Rule 168   comaLlamada -> COMA
Rule 169   pareDerLlamada -> PAREDER
Rule 170   llamadaExp -> llamada
Rule 171   llamadaEstat -> llamada

Terminals, with rules where they appear

BRADER               : 7 9 12 14 17 19
BRAIZQ               : 7 9 12 14 17 19
CADENA               : 156
CAR                  : 32
COMA                 : 36 86 88 89 96 96 96 98 98 98 100 100 102 102 102 102 104 104 168
COMBINS              : 88
C_CAR                : 155
C_ENT                : 7 9 12 14 17 19 153
C_FLOT               : 154
DESESTANDAR          : 80
DIFF                 : 148
DIV                  : 152
DSTBINOM             : 95
DSTBINOMNEG          : 97
DSTGEOM              : 99
DSTHIPGEOM           : 101
DSTPOISSON           : 103
ENT                  : 30
ESCRIB               : 142
FLOT                 : 31
GRAFCAJA             : 109
HISTOGRAMA           : 108
ID                   : 6 11 16 73 74 75 79 80 81 108 109 134 135 136 165
IGUAL                : 140
IGUALQ               : 147
INICIO               : 133
LEER                 : 141
LLADER               : 22 27
LLAIZQ               : 22 27
MAS                  : 149
MAYOR                : 145
MEDIA                : 73
MEDIANA              : 74
MENOR                : 146
MENOS                : 150
MIENTRAS             : 137
MODA                 : 75
O                    : 143
OTRO                 : 138
PAREDER              : 21 49 56 57 73 74 75 79 80 81 85 88 89 95 97 99 101 103 108 109 139 158 169
PAREIZQ              : 21 49 56 57 60 65 73 74 75 79 80 81 85 88 89 95 97 99 101 103 108 109 157 166
PERMUTS              : 89
POR                  : 151
PRINCIPAL            : 164
PUCOMA               : 1 11 16 21 38
RANGO                : 81
REGLAMULTI           : 85
REGRESA              : 49
SI                   : 60
VACIO                : 135
VARIANZA             : 79
Y                    : 144
error                : 

Nonterminals, with rules where they appear

asignacion           : 39
c_car                : 127
c_ent                : 125
c_flot               : 126
cadena               : 59 131
comaLlamada          : 54
combins              : 83
compara              : 117
condicion            : 44
condicion2           : 60
condicion3           : 61
condicion4           : 62 63
cuerpo               : 1 60 63 65
cuerpo2              : 27 28
cuerpoFunc           : 21
cuerpoFunc2          : 22 23
cuerpoFunc3          : 24 25
dec_vars             : 2
dec_vars2            : 11
dec_vars3            : 12 13
dec_vars_funcs       : 23
dec_vars_funcs2      : 16
dec_vars_funcs3      : 17 18
desestandar          : 77
distribuciones       : 69
dstbinom             : 90
dstbinom2            : 95
dstbinomneg          : 91
dstbinomneg2         : 97
dstgeom              : 92
dstgeom2             : 99
dsthipgeom           : 93
dsthipgeom2          : 101
dstpoisson           : 94
dstpoisson2          : 103
escrib               : 57
escribir             : 43
escribir2            : 57
estatuto             : 25 28
estatuto2            : 38
expresion_a          : 48 49 58 60 65 85 86 88 88 89 89 96 96 96 96 98 98 98 98 100 100 100 102 102 102 102 102 104 104 104 111 124 167
expresion_a2         : 110
expresion_b          : 110 114
expresion_b2         : 113
expresion_c          : 113
expresion_d          : 116 117 117 119
expresion_d2         : 118
expresion_e          : 118 122
expresion_e2         : 121
expresion_f          : 121
fin                  : 5 10 15 20 26 29 34 37 52 55 64 87 112 115 120 123 159 160 161 162 163
func                 : 4
func_esp_c           : 47
func_esp_s           : 46 130
grafcaja             : 107
histograma           : 106
idFunc               : 50
igual                : 48
inicio               : 1
lectura              : 42
leer                 : 56
llamada              : 170 171
llamada2             : 50
llamada3             : 51
llamada4             : 53 54
llamadaEstat         : 41
llamadaExp           : 129
masmenos             : 119
media                : 70
mediana              : 71
medida_posicion      : 66
medida_variabilidad  : 67
mientras             : 45
mientrasTkn          : 65
moda                 : 72
o                    : 111
otro                 : 63
paramExpr            : 53 54
params               : 21
params2              : 33 36
params3              : 35
pareDerIfWhile       : 60 65
pareDerLlamada       : 50
pareIzqLlamada       : 50
parederEx            : 124
pareizqEx            : 124
permuts              : 84
pordiv               : 122
principal            : 1
programa             : 0
programa2            : 1 2
programa3            : 3 4
puntos_muestrales    : 68
rango                : 78
registroFuncs        : 21
registroVars         : 35
reglamulti           : 82
reglamulti2          : 85 86
regresa              : 40
revisaMaMeIgDif      : 116 117 117
revisaMasMen         : 118
revisaO              : 110
revisaPorDiv         : 121
revisaY              : 113
tipo                 : 11 16 134 136
valores_graficos     : 105
variable             : 48 56 128
variable2            : 6
variable3            : 7 8
varianza             : 76
y                    : 114

Parsing method: SLR

state 0

    (0) S' -> . programa
    (1) programa -> . inicio programa2 principal cuerpo PUCOMA
    (133) inicio -> . INICIO

    INICIO          shift and go to state 3

    programa                       shift and go to state 1
    inicio                         shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> inicio . programa2 principal cuerpo PUCOMA
    (2) programa2 -> . dec_vars programa2
    (3) programa2 -> . programa3
    (11) dec_vars -> . tipo ID dec_vars2 PUCOMA
    (4) programa3 -> . func programa3
    (5) programa3 -> . fin
    (30) tipo -> . ENT
    (31) tipo -> . FLOT
    (32) tipo -> . CAR
    (21) func -> . registroFuncs PAREIZQ params PAREDER cuerpoFunc PUCOMA
    (132) fin -> .
    (134) registroFuncs -> . tipo ID
    (135) registroFuncs -> . VACIO ID

    ENT             shift and go to state 10
    FLOT            shift and go to state 11
    CAR             shift and go to state 12
    PRINCIPAL       reduce using rule 132 (fin -> .)
    PUCOMA          reduce using rule 132 (fin -> .)
    LLADER          reduce using rule 132 (fin -> .)
    PAREDER         reduce using rule 132 (fin -> .)
    COMA            reduce using rule 132 (fin -> .)
    O               reduce using rule 132 (fin -> .)
    Y               reduce using rule 132 (fin -> .)
    MAYOR           reduce using rule 132 (fin -> .)
    MENOR           reduce using rule 132 (fin -> .)
    IGUALQ          reduce using rule 132 (fin -> .)
    DIFF            reduce using rule 132 (fin -> .)
    MAS             reduce using rule 132 (fin -> .)
    MENOS           reduce using rule 132 (fin -> .)
    POR             reduce using rule 132 (fin -> .)
    DIV             reduce using rule 132 (fin -> .)
    IGUAL           reduce using rule 132 (fin -> .)
    VACIO           shift and go to state 14

    programa2                      shift and go to state 4
    dec_vars                       shift and go to state 5
    programa3                      shift and go to state 6
    tipo                           shift and go to state 7
    func                           shift and go to state 8
    fin                            shift and go to state 9
    registroFuncs                  shift and go to state 13

state 3

    (133) inicio -> INICIO .

    ENT             reduce using rule 133 (inicio -> INICIO .)
    FLOT            reduce using rule 133 (inicio -> INICIO .)
    CAR             reduce using rule 133 (inicio -> INICIO .)
    VACIO           reduce using rule 133 (inicio -> INICIO .)
    PRINCIPAL       reduce using rule 133 (inicio -> INICIO .)


state 4

    (1) programa -> inicio programa2 . principal cuerpo PUCOMA
    (164) principal -> . PRINCIPAL

    PRINCIPAL       shift and go to state 16

    principal                      shift and go to state 15

state 5

    (2) programa2 -> dec_vars . programa2
    (2) programa2 -> . dec_vars programa2
    (3) programa2 -> . programa3
    (11) dec_vars -> . tipo ID dec_vars2 PUCOMA
    (4) programa3 -> . func programa3
    (5) programa3 -> . fin
    (30) tipo -> . ENT
    (31) tipo -> . FLOT
    (32) tipo -> . CAR
    (21) func -> . registroFuncs PAREIZQ params PAREDER cuerpoFunc PUCOMA
    (132) fin -> .
    (134) registroFuncs -> . tipo ID
    (135) registroFuncs -> . VACIO ID

    ENT             shift and go to state 10
    FLOT            shift and go to state 11
    CAR             shift and go to state 12
    PRINCIPAL       reduce using rule 132 (fin -> .)
    PUCOMA          reduce using rule 132 (fin -> .)
    LLADER          reduce using rule 132 (fin -> .)
    PAREDER         reduce using rule 132 (fin -> .)
    COMA            reduce using rule 132 (fin -> .)
    O               reduce using rule 132 (fin -> .)
    Y               reduce using rule 132 (fin -> .)
    MAYOR           reduce using rule 132 (fin -> .)
    MENOR           reduce using rule 132 (fin -> .)
    IGUALQ          reduce using rule 132 (fin -> .)
    DIFF            reduce using rule 132 (fin -> .)
    MAS             reduce using rule 132 (fin -> .)
    MENOS           reduce using rule 132 (fin -> .)
    POR             reduce using rule 132 (fin -> .)
    DIV             reduce using rule 132 (fin -> .)
    IGUAL           reduce using rule 132 (fin -> .)
    VACIO           shift and go to state 14

    dec_vars                       shift and go to state 5
    programa2                      shift and go to state 17
    programa3                      shift and go to state 6
    tipo                           shift and go to state 7
    func                           shift and go to state 8
    fin                            shift and go to state 9
    registroFuncs                  shift and go to state 13

state 6

    (3) programa2 -> programa3 .

    PRINCIPAL       reduce using rule 3 (programa2 -> programa3 .)


state 7

    (11) dec_vars -> tipo . ID dec_vars2 PUCOMA
    (134) registroFuncs -> tipo . ID

    ID              shift and go to state 18


state 8

    (4) programa3 -> func . programa3
    (4) programa3 -> . func programa3
    (5) programa3 -> . fin
    (21) func -> . registroFuncs PAREIZQ params PAREDER cuerpoFunc PUCOMA
    (132) fin -> .
    (134) registroFuncs -> . tipo ID
    (135) registroFuncs -> . VACIO ID
    (30) tipo -> . ENT
    (31) tipo -> . FLOT
    (32) tipo -> . CAR

    PRINCIPAL       reduce using rule 132 (fin -> .)
    PUCOMA          reduce using rule 132 (fin -> .)
    LLADER          reduce using rule 132 (fin -> .)
    PAREDER         reduce using rule 132 (fin -> .)
    COMA            reduce using rule 132 (fin -> .)
    O               reduce using rule 132 (fin -> .)
    Y               reduce using rule 132 (fin -> .)
    MAYOR           reduce using rule 132 (fin -> .)
    MENOR           reduce using rule 132 (fin -> .)
    IGUALQ          reduce using rule 132 (fin -> .)
    DIFF            reduce using rule 132 (fin -> .)
    MAS             reduce using rule 132 (fin -> .)
    MENOS           reduce using rule 132 (fin -> .)
    POR             reduce using rule 132 (fin -> .)
    DIV             reduce using rule 132 (fin -> .)
    IGUAL           reduce using rule 132 (fin -> .)
    VACIO           shift and go to state 14
    ENT             shift and go to state 10
    FLOT            shift and go to state 11
    CAR             shift and go to state 12

    func                           shift and go to state 8
    programa3                      shift and go to state 19
    fin                            shift and go to state 9
    registroFuncs                  shift and go to state 13
    tipo                           shift and go to state 20

state 9

    (5) programa3 -> fin .

    PRINCIPAL       reduce using rule 5 (programa3 -> fin .)


state 10

    (30) tipo -> ENT .

    ID              reduce using rule 30 (tipo -> ENT .)


state 11

    (31) tipo -> FLOT .

    ID              reduce using rule 31 (tipo -> FLOT .)


state 12

    (32) tipo -> CAR .

    ID              reduce using rule 32 (tipo -> CAR .)


state 13

    (21) func -> registroFuncs . PAREIZQ params PAREDER cuerpoFunc PUCOMA

    PAREIZQ         shift and go to state 21


state 14

    (135) registroFuncs -> VACIO . ID

    ID              shift and go to state 22


state 15

    (1) programa -> inicio programa2 principal . cuerpo PUCOMA
    (27) cuerpo -> . LLAIZQ cuerpo2 LLADER

    LLAIZQ          shift and go to state 24

    cuerpo                         shift and go to state 23

state 16

    (164) principal -> PRINCIPAL .

    LLAIZQ          reduce using rule 164 (principal -> PRINCIPAL .)


state 17

    (2) programa2 -> dec_vars programa2 .

    PRINCIPAL       reduce using rule 2 (programa2 -> dec_vars programa2 .)


state 18

    (11) dec_vars -> tipo ID . dec_vars2 PUCOMA
    (134) registroFuncs -> tipo ID .
    (12) dec_vars2 -> . BRAIZQ C_ENT BRADER dec_vars3
    (13) dec_vars2 -> . dec_vars3
    (14) dec_vars3 -> . BRAIZQ C_ENT BRADER
    (15) dec_vars3 -> . fin
    (132) fin -> .

    PAREIZQ         reduce using rule 134 (registroFuncs -> tipo ID .)
    BRAIZQ          shift and go to state 26
    PRINCIPAL       reduce using rule 132 (fin -> .)
    PUCOMA          reduce using rule 132 (fin -> .)
    LLADER          reduce using rule 132 (fin -> .)
    PAREDER         reduce using rule 132 (fin -> .)
    COMA            reduce using rule 132 (fin -> .)
    O               reduce using rule 132 (fin -> .)
    Y               reduce using rule 132 (fin -> .)
    MAYOR           reduce using rule 132 (fin -> .)
    MENOR           reduce using rule 132 (fin -> .)
    IGUALQ          reduce using rule 132 (fin -> .)
    DIFF            reduce using rule 132 (fin -> .)
    MAS             reduce using rule 132 (fin -> .)
    MENOS           reduce using rule 132 (fin -> .)
    POR             reduce using rule 132 (fin -> .)
    DIV             reduce using rule 132 (fin -> .)
    IGUAL           reduce using rule 132 (fin -> .)

    dec_vars2                      shift and go to state 25
    dec_vars3                      shift and go to state 27
    fin                            shift and go to state 28

state 19

    (4) programa3 -> func programa3 .

    PRINCIPAL       reduce using rule 4 (programa3 -> func programa3 .)


state 20

    (134) registroFuncs -> tipo . ID

    ID              shift and go to state 29


state 21

    (21) func -> registroFuncs PAREIZQ . params PAREDER cuerpoFunc PUCOMA
    (33) params -> . params2
    (34) params -> . fin
    (35) params2 -> . registroVars params3
    (132) fin -> .
    (136) registroVars -> . tipo ID
    (30) tipo -> . ENT
    (31) tipo -> . FLOT
    (32) tipo -> . CAR

    PRINCIPAL       reduce using rule 132 (fin -> .)
    PUCOMA          reduce using rule 132 (fin -> .)
    LLADER          reduce using rule 132 (fin -> .)
    PAREDER         reduce using rule 132 (fin -> .)
    COMA            reduce using rule 132 (fin -> .)
    O               reduce using rule 132 (fin -> .)
    Y               reduce using rule 132 (fin -> .)
    MAYOR           reduce using rule 132 (fin -> .)
    MENOR           reduce using rule 132 (fin -> .)
    IGUALQ          reduce using rule 132 (fin -> .)
    DIFF            reduce using rule 132 (fin -> .)
    MAS             reduce using rule 132 (fin -> .)
    MENOS           reduce using rule 132 (fin -> .)
    POR             reduce using rule 132 (fin -> .)
    DIV             reduce using rule 132 (fin -> .)
    IGUAL           reduce using rule 132 (fin -> .)
    ENT             shift and go to state 10
    FLOT            shift and go to state 11
    CAR             shift and go to state 12

    params                         shift and go to state 30
    params2                        shift and go to state 31
    fin                            shift and go to state 32
    registroVars                   shift and go to state 33
    tipo                           shift and go to state 34

state 22

    (135) registroFuncs -> VACIO ID .

    PAREIZQ         reduce using rule 135 (registroFuncs -> VACIO ID .)


state 23

    (1) programa -> inicio programa2 principal cuerpo . PUCOMA

    PUCOMA          shift and go to state 35


state 24

    (27) cuerpo -> LLAIZQ . cuerpo2 LLADER
    (28) cuerpo2 -> . estatuto cuerpo2
    (29) cuerpo2 -> . fin
    (38) estatuto -> . estatuto2 PUCOMA
    (132) fin -> .
    (39) estatuto2 -> . asignacion
    (40) estatuto2 -> . regresa
    (41) estatuto2 -> . llamadaEstat
    (42) estatuto2 -> . lectura
    (43) estatuto2 -> . escribir
    (44) estatuto2 -> . condicion
    (45) estatuto2 -> . mientras
    (46) estatuto2 -> . func_esp_s
    (47) estatuto2 -> . func_esp_c
    (48) asignacion -> . variable igual expresion_a
    (49) regresa -> . REGRESA PAREIZQ expresion_a PAREDER
    (171) llamadaEstat -> . llamada
    (56) lectura -> . leer PAREIZQ variable PAREDER
    (57) escribir -> . escrib PAREIZQ escribir2 PAREDER
    (60) condicion -> . SI PAREIZQ expresion_a pareDerIfWhile cuerpo condicion2
    (65) mientras -> . mientrasTkn PAREIZQ expresion_a pareDerIfWhile cuerpo
    (66) func_esp_s -> . medida_posicion
    (67) func_esp_s -> . medida_variabilidad
    (68) func_esp_s -> . puntos_muestrales
    (69) func_esp_s -> . distribuciones
    (105) func_esp_c -> . valores_graficos
    (6) variable -> . ID variable2
    (50) llamada -> . idFunc pareIzqLlamada llamada2 pareDerLlamada
    (141) leer -> . LEER
    (142) escrib -> . ESCRIB
    (137) mientrasTkn -> . MIENTRAS
    (70) medida_posicion -> . media
    (71) medida_posicion -> . mediana
    (72) medida_posicion -> . moda
    (76) medida_variabilidad -> . varianza
    (77) medida_variabilidad -> . desestandar
    (78) medida_variabilidad -> . rango
    (82) puntos_muestrales -> . reglamulti
    (83) puntos_muestrales -> . combins
    (84) puntos_muestrales -> . permuts
    (90) distribuciones -> . dstbinom
    (91) distribuciones -> . dstbinomneg
    (92) distribuciones -> . dstgeom
    (93) distribuciones -> . dsthipgeom
    (94) distribuciones -> . dstpoisson
    (106) valores_graficos -> . histograma
    (107) valores_graficos -> . grafcaja
    (165) idFunc -> . ID
    (73) media -> . MEDIA PAREIZQ ID PAREDER
    (74) mediana -> . MEDIANA PAREIZQ ID PAREDER
    (75) moda -> . MODA PAREIZQ ID PAREDER
    (79) varianza -> . VARIANZA PAREIZQ ID PAREDER
    (80) desestandar -> . DESESTANDAR PAREIZQ ID PAREDER
    (81) rango -> . RANGO PAREIZQ ID PAREDER
    (85) reglamulti -> . REGLAMULTI PAREIZQ expresion_a reglamulti2 PAREDER
    (88) combins -> . COMBINS PAREIZQ expresion_a COMA expresion_a PAREDER
    (89) permuts -> . PERMUTS PAREIZQ expresion_a COMA expresion_a PAREDER
    (95) dstbinom -> . DSTBINOM PAREIZQ dstbinom2 PAREDER
    (97) dstbinomneg -> . DSTBINOMNEG PAREIZQ dstbinomneg2 PAREDER
    (99) dstgeom -> . DSTGEOM PAREIZQ dstgeom2 PAREDER
    (101) dsthipgeom -> . DSTHIPGEOM PAREIZQ dsthipgeom2 PAREDER
    (103) dstpoisson -> . DSTPOISSON PAREIZQ dstpoisson2 PAREDER
    (108) histograma -> . HISTOGRAMA PAREIZQ ID PAREDER
    (109) grafcaja -> . GRAFCAJA PAREIZQ ID PAREDER

    PRINCIPAL       reduce using rule 132 (fin -> .)
    PUCOMA          reduce using rule 132 (fin -> .)
    LLADER          reduce using rule 132 (fin -> .)
    PAREDER         reduce using rule 132 (fin -> .)
    COMA            reduce using rule 132 (fin -> .)
    O               reduce using rule 132 (fin -> .)
    Y               reduce using rule 132 (fin -> .)
    MAYOR           reduce using rule 132 (fin -> .)
    MENOR           reduce using rule 132 (fin -> .)
    IGUALQ          reduce using rule 132 (fin -> .)
    DIFF            reduce using rule 132 (fin -> .)
    MAS             reduce using rule 132 (fin -> .)
    MENOS           reduce using rule 132 (fin -> .)
    POR             reduce using rule 132 (fin -> .)
    DIV             reduce using rule 132 (fin -> .)
    IGUAL           reduce using rule 132 (fin -> .)
    REGRESA         shift and go to state 50
    SI              shift and go to state 54
    ID              shift and go to state 61
    LEER            shift and go to state 63
    ESCRIB          shift and go to state 64
    MIENTRAS        shift and go to state 65
    MEDIA           shift and go to state 82
    MEDIANA         shift and go to state 83
    MODA            shift and go to state 84
    VARIANZA        shift and go to state 85
    DESESTANDAR     shift and go to state 86
    RANGO           shift and go to state 87
    REGLAMULTI      shift and go to state 88
    COMBINS         shift and go to state 89
    PERMUTS         shift and go to state 90
    DSTBINOM        shift and go to state 91
    DSTBINOMNEG     shift and go to state 92
    DSTGEOM         shift and go to state 93
    DSTHIPGEOM      shift and go to state 94
    DSTPOISSON      shift and go to state 95
    HISTOGRAMA      shift and go to state 96
    GRAFCAJA        shift and go to state 97

    cuerpo2                        shift and go to state 36
    estatuto                       shift and go to state 37
    fin                            shift and go to state 38
    estatuto2                      shift and go to state 39
    asignacion                     shift and go to state 40
    regresa                        shift and go to state 41
    llamadaEstat                   shift and go to state 42
    lectura                        shift and go to state 43
    escribir                       shift and go to state 44
    condicion                      shift and go to state 45
    mientras                       shift and go to state 46
    func_esp_s                     shift and go to state 47
    func_esp_c                     shift and go to state 48
    variable                       shift and go to state 49
    llamada                        shift and go to state 51
    leer                           shift and go to state 52
    escrib                         shift and go to state 53
    mientrasTkn                    shift and go to state 55
    medida_posicion                shift and go to state 56
    medida_variabilidad            shift and go to state 57
    puntos_muestrales              shift and go to state 58
    distribuciones                 shift and go to state 59
    valores_graficos               shift and go to state 60
    idFunc                         shift and go to state 62
    media                          shift and go to state 66
    mediana                        shift and go to state 67
    moda                           shift and go to state 68
    varianza                       shift and go to state 69
    desestandar                    shift and go to state 70
    rango                          shift and go to state 71
    reglamulti                     shift and go to state 72
    combins                        shift and go to state 73
    permuts                        shift and go to state 74
    dstbinom                       shift and go to state 75
    dstbinomneg                    shift and go to state 76
    dstgeom                        shift and go to state 77
    dsthipgeom                     shift and go to state 78
    dstpoisson                     shift and go to state 79
    histograma                     shift and go to state 80
    grafcaja                       shift and go to state 81

state 25

    (11) dec_vars -> tipo ID dec_vars2 . PUCOMA

    PUCOMA          shift and go to state 98


state 26

    (12) dec_vars2 -> BRAIZQ . C_ENT BRADER dec_vars3
    (14) dec_vars3 -> BRAIZQ . C_ENT BRADER

    C_ENT           shift and go to state 99


state 27

    (13) dec_vars2 -> dec_vars3 .

    PUCOMA          reduce using rule 13 (dec_vars2 -> dec_vars3 .)


state 28

    (15) dec_vars3 -> fin .

    PUCOMA          reduce using rule 15 (dec_vars3 -> fin .)


state 29

    (134) registroFuncs -> tipo ID .

    PAREIZQ         reduce using rule 134 (registroFuncs -> tipo ID .)


state 30

    (21) func -> registroFuncs PAREIZQ params . PAREDER cuerpoFunc PUCOMA

    PAREDER         shift and go to state 100


state 31

    (33) params -> params2 .

    PAREDER         reduce using rule 33 (params -> params2 .)


state 32

    (34) params -> fin .

    PAREDER         reduce using rule 34 (params -> fin .)


state 33

    (35) params2 -> registroVars . params3
    (36) params3 -> . COMA params2
    (37) params3 -> . fin
    (132) fin -> .

  ! shift/reduce conflict for COMA resolved as shift
    COMA            shift and go to state 102
    PRINCIPAL       reduce using rule 132 (fin -> .)
    PUCOMA          reduce using rule 132 (fin -> .)
    LLADER          reduce using rule 132 (fin -> .)
    PAREDER         reduce using rule 132 (fin -> .)
    O               reduce using rule 132 (fin -> .)
    Y               reduce using rule 132 (fin -> .)
    MAYOR           reduce using rule 132 (fin -> .)
    MENOR           reduce using rule 132 (fin -> .)
    IGUALQ          reduce using rule 132 (fin -> .)
    DIFF            reduce using rule 132 (fin -> .)
    MAS             reduce using rule 132 (fin -> .)
    MENOS           reduce using rule 132 (fin -> .)
    POR             reduce using rule 132 (fin -> .)
    DIV             reduce using rule 132 (fin -> .)
    IGUAL           reduce using rule 132 (fin -> .)

  ! COMA            [ reduce using rule 132 (fin -> .) ]

    params3                        shift and go to state 101
    fin                            shift and go to state 103
